feat: 編輯訂單商品dialog必填無星號

--- a/src/app/views/features/order/view-order/view-order.component.html
+++ b/src/app/views/features/order/view-order/view-order.component.html
@@ -438,7 +438,7 @@
       </div>
       <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
-          <label>銷售價格</label>
+          <label><span class="required-star">*</span>銷售價格</label>
           <br>
           <p-inputNumber inputId="integeronly" mode="currency" currency="TWD" locale="en-tw" class="w-full"
                          [min]="0" [formControlName]="'unit_price'" [minFractionDigits]="0"
@@ -449,7 +449,7 @@
       </div>
       <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
-          <label>數量</label>
+          <label><span class="required-star">*</span>數量</label>
           <br>
           <p-inputNumber inputId="integeronly" class="w-full" [min]="1" [formControlName]="'quantity'"
                          [ngClass]="{'ng-dirty':edit_product_form.controls['quantity'].hasError('required') && edit_product_form.controls['quantity'].touched}">
