fix: 產品無法修改

--- a/src/app/views/features/product/product.component.html
+++ b/src/app/views/features/product/product.component.html
@@ -47,8 +47,8 @@
             <!-- <td>{{ product.series }}</td> -->
             <td>
               <div class="flex justify-content-end">
-              <p-button (click)="showDialog('edit',product)" icon="pi pi-pencil" pTooltip="編輯" tooltipPosition="top"
-                        styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
+<!--              <p-button (click)="showDialog('edit',product)" icon="pi pi-pencil" pTooltip="編輯" tooltipPosition="top"-->
+<!--                        styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>-->
 <!--              <p-button icon="pi pi-trash"-->
 <!--                        styleClass="p-button-rounded p-button-secondary p-button-text" pTooltip="刪除"-->
 <!--                        tooltipPosition="top" (click)="deleteProductRequest(product.product_id)"></p-button>-->
