--- a/src/app/views/components/toolbar/toolbar.component.html
+++ b/src/app/views/components/toolbar/toolbar.component.html
@@ -9,9 +9,9 @@
       <input type="text" placeholder="搜尋" name="text" class="input">
       <i class="pi pi-search"></i>
     </span>
-      <p-button pTooltip="行事曆" tooltipPosition="bottom" icon="pi pi-calendar" routerLink="/main/event"
+      <p-button pTooltip="行事曆" icon="pi pi-calendar" routerLink="/main/event"
                 styleClass="text-white p-button-rounded p-button-secondary p-button-text p-button-lg mr-2"></p-button>
-      <p-button pTooltip="帳號" tooltipPosition="bottom" icon="pi pi-user" (click)="menu.toggle($event)"
+      <p-button pTooltip="帳號" icon="pi pi-user" (click)="menu.toggle($event)"
                 styleClass="text-white p-button-rounded p-button-secondary p-button-text p-button-lg mr-3"></p-button>
     </ng-template>
   </p-menubar>
