--- a/src/app/views/features/order/order.component.html
+++ b/src/app/views/features/order/order.component.html
@@ -99,9 +99,9 @@
         <div class="field">
           <label><span class="required-star">*</span>契約號碼</label>
           <p-dropdown placeholder="搜尋契約" [disabled]="true" formControlName="contract_code" appendTo="body"
-                      [options]="GetAllContract" (ngModelChange)="validateStartDate()"
+                      [options]="GetAllContract" (onChange)="validateStartDate()"
                       [filter]="true" filterBy="code" optionLabel="code" [showClear]="true"
-                      [ngClass]="{'ng-dirty': order_form.controls['contract_id'].hasError('required') && order_form.controls['contract_id'].touched}"
+                      [ngClass]="{'ng-dirty': order_form.controls['contract_code'].hasError('required') && order_form.controls['contract_code'].touched}"
           ></p-dropdown>
         </div>
       </div>
@@ -170,7 +170,7 @@
       <ng-container *ngIf="!showedit">
         <p-button label="新增" (click)="postOrderRequest()" styleClass="p-button-info"></p-button>
       </ng-container>
-      <ng-container *ngIf="order_form.controls['status'].value === '草稿'">
+      <ng-container *ngIf="order_form.controls['status'].value.name === '草稿'">
           <p-button label="儲存" (click)="patchOrderRequest(o_id)"
                     styleClass="p-button-info"></p-button>
         </ng-container>
