--- a/src/app/views/features/order/order.component.html
+++ b/src/app/views/features/order/order.component.html
@@ -99,7 +99,7 @@
         <div class="field">
           <label><span class="required-star">*</span>契約號碼</label>
           <p-dropdown placeholder="搜尋契約" [disabled]="true" formControlName="contract_code" appendTo="body"
-                      [options]="GetAllContract" (onChange)="validateStartDate()"
+                      [options]="GetAllContract" (ngModelChange)="validateStartDate()"
                       [filter]="true" filterBy="code" optionLabel="code" [showClear]="true"
                       [ngClass]="{'ng-dirty': order_form.controls['contract_code'].hasError('required') && order_form.controls['contract_code'].touched}"
           ></p-dropdown>
@@ -108,7 +108,7 @@
       <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label><span class="required-star">*</span>訂單開始日期</label>
-          <p-calendar [appendTo]="'body'" dateFormat="yy-mm-dd" [showButtonBar]="true" formControlName="start_date" [minDate]="MinDate"
+          <p-calendar (ngModelChange)="validateStartDate()" [appendTo]="'body'" dateFormat="yy-mm-dd" [showButtonBar]="true" formControlName="start_date" [minDate]="MinDate"
                       [ngClass]="{'ng-dirty':order_form.controls['start_date'].hasError('required') && order_form.controls['start_date'].touched}"></p-calendar>
           <div class="required-star" *ngIf="order_form.controls['start_date'].hasError('required-star')">
             訂單開始日期不可早於契約日期
